--- a/css/about.css
+++ b/css/about.css
@@ -1,247 +1,135 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-.tipografia{
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: rgba(240, 248, 255, 0.966);
-}
-.linea{
-    display: inline-block;
-}
-a{
-    text-decoration: none;
-    color: rgba(240, 248, 255, 0.966);
-}
-ul li{
-    list-style-type: none;
-    padding: 7px;
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
 }
 
-footer{
-    text-align: center;
-   /*position: absolute;
-    bottom: 0px;*/
-    width: 100%;
-    margin: 7px;
-   /* height: 40px;*/
-}
-header nav ul{
-    grid-area: nav ;
-    display: flex;
-    flex-direction: row;
-    justify-self: end;
-    width: auto;
-}
-.nombre{
-    color: black;
-    font-size: 25px;
-    margin: 5px;
-    font-weight: bold;
-    text-align: center;
-}
-.letra{
-    text-decoration: underline;
-}
-.logo{
-    margin: 10px;
-    padding: 10px;
-}
-.bloque_img{
-    /*width: 500px;
-    height: 200px;*/
-    margin: 20px;
-    width: auto;
-    height: auto;
-}
-.arq{
-    background-image: url(../image/arquitectura.jpg);
-    grid-area: arq;
-    width: 70%;
-    height: 5rem;
-
-}
-.fotografia{
-    background-image: url(../image/fotografia.jpg);
-    grid-area: fotograf;
-}
-.diseño{
-    background-image: url(../image/diseño.jpg);
-    grid-area: diseño;
-}
-.contenedor_grid{
-    display: grid;
-    grid-template-columns: repeat(1fr 1fr);
-    grid-template-areas: 
-    "a1 arq"
-    "fotograf a2"
-    "a3 diseño"
-    "footer footer";
-    justify-items: center;
-    align-items: center;
-    width: auto;
-}
-.d1{
-    /*height: 300px;
-    width: 500px;*/
-    height: 330px;
-    align-content: center;
-    justify-content: center;
-}
-.a1{
-    grid-area: a1;
-    margin: 15px;
-}
-.a2{
-    grid-area: a2;
-    margin: 15px;
-}
-.a3{
-    grid-area: a3;
-    margin: 15px;
-}
-footer{
-    grid-area: footer;
-}
-.descripcion{
-    color: black ;
-    text-align: center;
-    height: 80%;
-    margin: 7px 2px 7px 2px ;
-}
-/*CELULAR*/
-@media (max-width: 460px){
-    .contenedor_grid{
-        display: grid;
-        grid-template-columns: repeat(1fr 1fr);
-        grid-template-areas: 
-        "arq arq"
-        "a1 a1"
-        "fotograf fotograf"
-        "a2 a2"
-        "diseño diseño"
-        "a3 a3"
-        "footer footer";
-        justify-items: center;
-        align-items: center;
-    }
-    nav{
-        width: 100%;
-        height: auto;
-        display: grid;
-        grid-template-columns: repeat(1fr 1fr);
-        grid-template-areas:
-        "logo pag"
-        "nav nav";
-        align-items: center;
-    }
-    .navegacion{
-        grid-area: nav;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    #loggo{
-        grid-area: logo;
-        display: flex;
-        flex-direction: row;
-        justify-content: start;
-    }
-    #pag{
-        grid-area: pag;
-        display: flex;
-        flex-direction: row;
-        justify-self: end;
-    }
-
+a {
+  /*sacarle el subrayado y el color a los links*/
+  text-decoration: none;
+  padding: 10px;
+  color: rgba(240, 248, 255, 0.966);
 }
 
-/*TABLET*/
-@media(min-width:461px) and (max-width:905px){
-    .d1{
-        width: 100%;
-    }
-    .a1{
-        grid-area: a1;
-        margin: 15px;
-        background-color: rgb(46, 46, 46);
-    }
-    .a2{
-        grid-area: a2;
-        margin: 15px;
-        background-color: rgb(90, 90, 90);
-    }
-    .a3{
-        grid-area: a3;
-        margin: 15px;
-        align-items: center;
-        background-color: rgb(179, 179, 179);
-    }
-    footer{
-        grid-area: footer;
-    }
-    .descripcion{
-        text-align: center;
-        height: 80%;
-    }
-    .contenedor_grid{
-        display: grid;
-        grid-template-columns: repeat(1fr 1fr);
-        grid-template-areas: 
-        "arq arq"
-        "a1 a1"
-        "fotograf fotograf"
-        "a2 a2"
-        "diseño diseño"
-        "a3 a3"
-        "footer footer";
-        justify-items: center;
-        align-items: center;
-    
-    }
-    .bloque_img{
-        width: 500px;
-        height: 200px;
-        margin: 20px;
-    }
+ul li {
+  /*sacarle viñetas a las listas*/
+  list-style-type: none;
 }
-.flex{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
 
-    justify-content: space-between;
-    align-content: center;
+.bloque_img {
+  height: 330px;
+  align-content: center;
+  justify-content: center;
 }
-.todos{
-    background-color: brown;
-    width: 120px;
-    height: 120px;
-    margin: 10px;
-}
-#loggo{
-    grid-area: logo;
-    display: flex;
-    flex-direction: row;
-    justify-self: start;
-    width: auto;
-}
-#pag{
-    grid-area: pag;
-    display: flex;
-    flex-direction: row;
-    justify-self: center;
-    width: auto;
-}
-nav{
-    background-color: rgb(44, 44, 44);
-    color: rgba(240, 248, 255, 0.966);
-    width: 100%;
-    height: 80px;
-    display: grid;
-    grid-template-columns: repeat(1fr 1fr 1fr);
-    grid-template-areas:
-    "logo pag nav";
-    align-items: center;
 
+main span div div {
+  background-color: brown;
+  width: 120px;
+  height: 120px;
+  margin: 10px;
 }
+
+main footer div {
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+}
+
+.a1 {
+  grid-area: a1;
+}
+
+.a2 {
+  grid-area: a2;
+}
+
+.a3 {
+  grid-area: a3;
+}
+
+header nav {
+  background-color: #2c2c2c;
+  color: rgba(240, 248, 255, 0.966);
+  width: 100%;
+  height: 80px;
+  display: grid;
+  grid-template-columns: repeat(1fr 1fr 1fr);
+  grid-template-areas: "logo pag naav";
+  align-items: center;
+}
+header nav span {
+  grid-area: logo;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: start;
+  padding-left: 10px;
+}
+header nav div {
+  grid-area: pag;
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  width: auto;
+  display: inline-block;
+}
+header nav div h3 {
+  display: inline-block;
+}
+header nav ul {
+  display: inline-block;
+  grid-area: naav;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding: 7px;
+}
+
+main {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(1fr 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  grid-template-areas: "a1 arq" "fotograf a2" "a3 diseño" "footer footer";
+  justify-items: center;
+  align-items: center;
+  width: auto;
+}
+main span {
+  grid-area: arq;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+main span h3 {
+  display: black;
+  font-size: 25px;
+  margin: 5px;
+  font-weight: bold;
+  text-align: center;
+}
+main span p {
+  display: black;
+  text-align: center;
+  margin: 7px 2px 7px 2px;
+}
+main span div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+main footer {
+  grid-area: footer;
+  width: 100%;
+  margin: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+/*# sourceMappingURL=about.css.map */
